syntax = "proto3";

package store.management.system;

option go_package = "/laptop";

import "messages/memory_message.proto";

message Filter {
    double max_price_usd = 1;
    uint32 min_cpu_cores = 2;
    double main_cpu_ghz = 3;
    Memory min_ram = 4;
}